# yanniz3-pruning-playground

./: .gitignore  README.md  prune_resnet18.py
yapt/: setup.cfg
yapt/tests/: test_analyses.py  test_pruning.py
yapt/yapt/: __init__.py  _logging.py  utils.py
yapt/yapt/analyses/: __init__.py  cfg.py  summary.py
yapt/yapt/struct_pruning/: __init__.py  pruning.py  search_prune.py  symch.py
