[metadata]
name = yapt
version = 0.1
author = Yifan Zhao
author_email = yifanz16@illinois.edu
description = A DNN pruning tool.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
test_suite = tests
setup_requires =
    setuptools
install_requires =
    networkx >= 2.3
    numpy
    onnx
    onnx-simplifier
    opentuner >= 0.8.6
    pandas >= 1.2
    pydot
    pytorch-lightning >= 1.3, < 1.4
    torch >= 1.8, < 1.11
    torchvision >= 0.8
    tqdm
[options.packages.find]
include = 
    yapt
    yapt.*
